// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ee/BoardContentSidebar incident sidebar matches the snapshot 1`] = `
<div
  class="boards-sidebar"
>
  <h2
    class="gl-my-0 gl-font-size-h2 gl-line-height-24"
  >
    Incident details
  </h2>
   
  <sidebartodowidget-stub
    class="gl-mt-3"
    fullpath="gitlab-org/gitlab-test"
    issuableid="gid://gitlab/Issue/436"
    issuableiid="27"
    issuabletype="issue"
  />
   
  <boardsidebartitle-stub
    activeitem="[object Object]"
    data-testid="sidebar-title"
  />
   
  <sidebarassigneeswidget-stub
    editable="true"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    initialassignees="[object Object],[object Object]"
    issuabletype="issue"
  />
   
  <!---->
   
  <div>
    <sidebardropdownwidget-stub
      attrworkspacepath="gitlab-org/gitlab-test"
      data-testid="sidebar-milestones"
      iid="27"
      issuableattribute="milestone"
      issuabletype="issue"
      workspacepath="gitlab-org/gitlab-test"
    />
     
    <!---->
  </div>
   
  <div
    class="time-tracker sidebar-help-wrap"
    data-testid="time-tracker"
  >
    <!---->
     
    <div
      class="hide-collapsed gl-line-height-20 gl-text-gray-900 gl-display-flex gl-align-items-center gl-font-weight-bold"
    >
      
    Time tracking
    
      <!---->
       
      <div
        class="gl-ml-auto gl-display-flex"
      >
        <button
          aria-label="Set estimate"
          class="btn btn-default btn-sm gl-button btn-default-tertiary"
          data-testid="set-time-estimate-button"
          title="Set estimate"
          type="button"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            <svg
              aria-hidden="true"
              class="gl-text-gray-900! gl-icon s16"
              data-testid="timer-icon"
              role="img"
            >
              <use
                href="file-mock#timer"
              />
            </svg>
          </span>
        </button>
         
        <button
          class="btn btn-default btn-sm gl-button btn-default-tertiary"
          data-testid="add-time-entry-button"
          title="Add time entry"
          type="button"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            <svg
              aria-hidden="true"
              class="gl-text-gray-900! gl-icon s16"
              data-testid="plus-icon"
              role="img"
            >
              <use
                href="file-mock#plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
     
    <div
      class="hide-collapsed"
    >
      <!---->
       
      <!---->
       
      <div
        data-testid="noTrackingPane"
      >
        <span
          class="gl-text-gray-500"
        >
          No estimate or time spent
        </span>
      </div>
       
      <!---->
       
      <div>
        <!---->
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <sidebardatewidget-stub
    data-testid="sidebar-due-date"
    datetype="dueDate"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarlabelswidget-stub
    allowmultiselect="true"
    attrworkspacepath="gitlab-org/gitlab-test"
    class="block labels"
    dropdownbuttontext="Label"
    footercreatelabeltitle="Create project label"
    footermanagelabeltitle="Manage project labels"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
    labelcreatetype="project"
    labelscreatetitle="Create project label"
    labelsfilterbasepath=""
    labelsfilterparam="label_name"
    labelslisttitle="Assign labels"
    selectedlabels=""
    variant="sidebar"
    workspacetype="project"
  >
    
        None
      
  </sidebarlabelswidget-stub>
   
  <div
    class="block"
  >
    <div>
      <div
        class="gl-display-flex gl-align-items-center gl-line-height-20 gl-text-gray-900 gl-font-weight-bold"
      >
        <span
          class="hide-collapsed"
          data-testid="title"
        >
          
      Severity
    
        </span>
          
        <!---->
         
        <!---->
          
        <button
          class="btn gl-text-gray-900! gl-ml-auto hide-collapsed gl-mr-n2 shortcut-sidebar-dropdown-toggle btn-default btn-sm gl-button btn-default-tertiary"
          data-testid="edit-button"
          id=""
          type="button"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            
      Edit
    
          </span>
        </button>
      </div>
       
      <div
        class="gl-line-height-14"
        data-testid="collapsed-content"
      >
        <div
          class="sidebar-collapsed-icon"
        >
          <div
            class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s14 icon-unknown"
              data-testid="severity-unknown-icon"
              role="img"
            >
              <use
                href="file-mock#severity-unknown"
              />
            </svg>
             
            <!---->
          </div>
           
          <div
            class="gl-tooltip"
          >
            Severity: 
              Unknown
            
          </div>
        </div>
         
        <div
          class="hide-collapsed"
        >
          <div
            class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s12 icon-unknown gl-mr-3 gl-flex-shrink-0"
              data-testid="severity-unknown-icon"
              role="img"
            >
              <use
                href="file-mock#severity-unknown"
              />
            </svg>
             
            <span
              class="gl-min-w-0 gl-text-truncate"
            >
              
    Unknown
  
            </span>
          </div>
        </div>
      </div>
       
      <div
        class="gl-mt-3"
        data-testid="expanded-content"
        style="display: none;"
      >
        <div
          class="gl-new-dropdown gl-mt-3 gl-display-block!"
        >
          <button
            aria-controls="base-dropdown-5"
            aria-haspopup="listbox"
            aria-labelledby="dropdown-toggle-btn-2"
            class="btn btn-default btn-md btn-block gl-button gl-new-dropdown-toggle"
            data-testid="base-dropdown-toggle"
            id="dropdown-toggle-btn-2"
            listeners="[object Object]"
            type="button"
          >
            <!---->
             
            <!---->
              
            <span
              class="gl-button-text gl-w-full"
            >
              <span
                class="gl-new-dropdown-button-text"
              >
                
        Unknown
      
              </span>
               
              <svg
                aria-hidden="true"
                class="gl-button-icon gl-new-dropdown-chevron gl-icon s16"
                data-testid="chevron-down-icon"
                role="img"
              >
                <use
                  href="file-mock#chevron-down"
                />
              </svg>
            </span>
          </button>
           
          <div
            class="gl-new-dropdown-panel gl-w-31!"
            data-testid="base-dropdown-menu"
            id="base-dropdown-5"
          >
            <div
              class="gl-new-dropdown-inner"
            >
               
              <div
                class="gl-display-flex gl-align-items-center gl-p-4! gl-min-h-8 gl-border-b-1 gl-border-b-solid gl-border-b-gray-200"
              >
                <div
                  class="gl-flex-grow-1 gl-font-weight-bold gl-font-sm gl-pr-2"
                  data-testid="listbox-header-text"
                  id="listbox-header-4"
                >
                  
      Assign severity
    
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <!---->
               
              <ul
                aria-labelledby="listbox-header-4"
                class="gl-new-dropdown-contents gl-new-dropdown-contents-with-scrim-overlay gl-new-dropdown-contents"
                id="listbox-3"
                role="listbox"
                tabindex="-1"
              >
                <li
                  aria-hidden="true"
                  class="top-scrim-wrapper"
                  data-testid="top-scrim"
                >
                  <div
                    class="top-scrim top-scrim-dark"
                  />
                </li>
                 
                <li
                  aria-hidden="true"
                />
                 
                <li
                  class="gl-new-dropdown-item"
                  data-testid="listbox-item-CRITICAL"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="gl-new-dropdown-item-content"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-new-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <span
                      class="gl-new-dropdown-item-text-wrapper"
                    >
                      <div
                        class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                      >
                        <svg
                          aria-hidden="true"
                          class="gl-icon s12 icon-critical gl-mr-3 gl-flex-shrink-0"
                          data-testid="severity-critical-icon"
                          role="img"
                        >
                          <use
                            href="file-mock#severity-critical"
                          />
                        </svg>
                         
                        <span
                          class="gl-min-w-0 gl-text-truncate"
                        >
                          
    Critical - S1
  
                        </span>
                      </div>
                    </span>
                  </span>
                </li>
                <li
                  class="gl-new-dropdown-item"
                  data-testid="listbox-item-HIGH"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="gl-new-dropdown-item-content"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-new-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <span
                      class="gl-new-dropdown-item-text-wrapper"
                    >
                      <div
                        class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                      >
                        <svg
                          aria-hidden="true"
                          class="gl-icon s12 icon-high gl-mr-3 gl-flex-shrink-0"
                          data-testid="severity-high-icon"
                          role="img"
                        >
                          <use
                            href="file-mock#severity-high"
                          />
                        </svg>
                         
                        <span
                          class="gl-min-w-0 gl-text-truncate"
                        >
                          
    High - S2
  
                        </span>
                      </div>
                    </span>
                  </span>
                </li>
                <li
                  class="gl-new-dropdown-item"
                  data-testid="listbox-item-MEDIUM"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="gl-new-dropdown-item-content"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-new-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <span
                      class="gl-new-dropdown-item-text-wrapper"
                    >
                      <div
                        class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                      >
                        <svg
                          aria-hidden="true"
                          class="gl-icon s12 icon-medium gl-mr-3 gl-flex-shrink-0"
                          data-testid="severity-medium-icon"
                          role="img"
                        >
                          <use
                            href="file-mock#severity-medium"
                          />
                        </svg>
                         
                        <span
                          class="gl-min-w-0 gl-text-truncate"
                        >
                          
    Medium - S3
  
                        </span>
                      </div>
                    </span>
                  </span>
                </li>
                <li
                  class="gl-new-dropdown-item"
                  data-testid="listbox-item-LOW"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="gl-new-dropdown-item-content"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-new-dropdown-item-check-icon gl-visibility-hidden gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <span
                      class="gl-new-dropdown-item-text-wrapper"
                    >
                      <div
                        class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                      >
                        <svg
                          aria-hidden="true"
                          class="gl-icon s12 icon-low gl-mr-3 gl-flex-shrink-0"
                          data-testid="severity-low-icon"
                          role="img"
                        >
                          <use
                            href="file-mock#severity-low"
                          />
                        </svg>
                         
                        <span
                          class="gl-min-w-0 gl-text-truncate"
                        >
                          
    Low - S4
  
                        </span>
                      </div>
                    </span>
                  </span>
                </li>
                <li
                  aria-selected="true"
                  class="gl-new-dropdown-item"
                  data-testid="listbox-item-UNKNOWN"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="gl-new-dropdown-item-content gl-bg-gray-50!"
                  >
                    <svg
                      aria-hidden="true"
                      class="gl-icon s16 gl-new-dropdown-item-check-icon gl-mt-3 gl-align-self-start"
                      data-testid="dropdown-item-checkbox"
                      role="img"
                    >
                      <use
                        href="file-mock#mobile-issue-close"
                      />
                    </svg>
                     
                    <span
                      class="gl-new-dropdown-item-text-wrapper"
                    >
                      <div
                        class="incident-severity gl-display-inline-flex gl-align-items-center gl-justify-content-between gl-max-w-full"
                      >
                        <svg
                          aria-hidden="true"
                          class="gl-icon s12 icon-unknown gl-mr-3 gl-flex-shrink-0"
                          data-testid="severity-unknown-icon"
                          role="img"
                        >
                          <use
                            href="file-mock#severity-unknown"
                          />
                        </svg>
                         
                        <span
                          class="gl-min-w-0 gl-text-truncate"
                        >
                          
    Unknown
  
                        </span>
                      </div>
                    </span>
                  </span>
                </li>
                 
                <!---->
                 
                <!---->
                 
                <li
                  aria-hidden="true"
                />
                 
                <li
                  aria-hidden="true"
                  class="bottom-scrim-wrapper"
                  data-testid="bottom-scrim"
                >
                  <div
                    class="bottom-scrim"
                  />
                </li>
              </ul>
               
              <!---->
               
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <!---->
   
  <sidebarhealthstatuswidget-stub
    full-path="gitlab-org/gitlab-test"
    iid="27"
    issuable-type="issue"
  />
   
  <sidebarconfidentialitywidget-stub
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarsubscriptionswidget-stub
    data-testid="sidebar-notifications"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
</div>
`;

exports[`ee/BoardContentSidebar issue sidebar matches the snapshot 1`] = `
<div
  class="boards-sidebar"
>
  <h2
    class="gl-my-0 gl-font-size-h2 gl-line-height-24"
  >
    Issue details
  </h2>
   
  <sidebartodowidget-stub
    class="gl-mt-3"
    fullpath="gitlab-org/gitlab-test"
    issuableid="gid://gitlab/Issue/436"
    issuableiid="27"
    issuabletype="issue"
  />
   
  <boardsidebartitle-stub
    activeitem="[object Object]"
    data-testid="sidebar-title"
  />
   
  <sidebarassigneeswidget-stub
    editable="true"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    initialassignees="[object Object],[object Object]"
    issuabletype="issue"
  />
   
  <sidebardropdownwidget-stub
    attrworkspacepath="gitlab-org"
    data-testid="sidebar-epic"
    iid="27"
    issuableattribute="epic"
    issuabletype="issue"
    workspacepath="gitlab-org/gitlab-test"
  />
   
  <div>
    <sidebardropdownwidget-stub
      attrworkspacepath="gitlab-org/gitlab-test"
      data-testid="sidebar-milestones"
      iid="27"
      issuableattribute="milestone"
      issuabletype="issue"
      workspacepath="gitlab-org/gitlab-test"
    />
     
    <sidebariterationwidget-stub
      attr-workspace-path="gitlab-org"
      class="gl-mt-5"
      data-testid="iteration-edit"
      iid="27"
      issuable-type="issue"
      workspace-path="gitlab-org/gitlab-test"
    />
  </div>
   
  <div
    class="time-tracker sidebar-help-wrap"
    data-testid="time-tracker"
  >
    <!---->
     
    <div
      class="hide-collapsed gl-line-height-20 gl-text-gray-900 gl-display-flex gl-align-items-center gl-font-weight-bold"
    >
      
    Time tracking
    
      <!---->
       
      <div
        class="gl-ml-auto gl-display-flex"
      >
        <button
          aria-label="Set estimate"
          class="btn btn-default btn-sm gl-button btn-default-tertiary"
          data-testid="set-time-estimate-button"
          title="Set estimate"
          type="button"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            <svg
              aria-hidden="true"
              class="gl-text-gray-900! gl-icon s16"
              data-testid="timer-icon"
              role="img"
            >
              <use
                href="file-mock#timer"
              />
            </svg>
          </span>
        </button>
         
        <button
          class="btn btn-default btn-sm gl-button btn-default-tertiary"
          data-testid="add-time-entry-button"
          title="Add time entry"
          type="button"
        >
          <!---->
           
          <!---->
            
          <span
            class="gl-button-text"
          >
            <svg
              aria-hidden="true"
              class="gl-text-gray-900! gl-icon s16"
              data-testid="plus-icon"
              role="img"
            >
              <use
                href="file-mock#plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
     
    <div
      class="hide-collapsed"
    >
      <!---->
       
      <!---->
       
      <div
        data-testid="noTrackingPane"
      >
        <span
          class="gl-text-gray-500"
        >
          No estimate or time spent
        </span>
      </div>
       
      <!---->
       
      <div>
        <!---->
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <sidebardatewidget-stub
    data-testid="sidebar-due-date"
    datetype="dueDate"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarlabelswidget-stub
    allowmultiselect="true"
    attrworkspacepath="gitlab-org/gitlab-test"
    class="block labels"
    dropdownbuttontext="Label"
    footercreatelabeltitle="Create project label"
    footermanagelabeltitle="Manage project labels"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
    labelcreatetype="project"
    labelscreatetitle="Create project label"
    labelsfilterbasepath=""
    labelsfilterparam="label_name"
    labelslisttitle="Assign labels"
    selectedlabels=""
    variant="sidebar"
    workspacetype="project"
  >
    
        None
      
  </sidebarlabelswidget-stub>
   
  <!---->
   
  <sidebarweightwidget-stub
    full-path="gitlab-org/gitlab-test"
    iid="27"
    issuable-type="issue"
  />
   
  <sidebarhealthstatuswidget-stub
    full-path="gitlab-org/gitlab-test"
    iid="27"
    issuable-type="issue"
  />
   
  <sidebarconfidentialitywidget-stub
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
   
  <sidebarsubscriptionswidget-stub
    data-testid="sidebar-notifications"
    fullpath="gitlab-org/gitlab-test"
    iid="27"
    issuabletype="issue"
  />
</div>
`;
